vendor/ocaml/testsuite/tests/typing-modules/pr5911.ml.reference

#       module type S = sig type t val x : t end
#       module Good : functor (X : sig val x : unit end) -> sig  end
#   module type T = sig module M : S end
#       Characters 33-35:
  module Bad (X : T with type M.t := unit) = struct
                                  ^^
Error: Syntax error
# 
